[package]
name = "rainful_diffolor"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Chssam"]
license = "Apache-2.0 OR MIT"
rust-version = "1.79"
publish = false

[workspace]
resolver = "2"
[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
[profile.release]
codegen-units = 1
lto = "thin"

# [lib]
# name = "rainful_diffolor"
# crate-type = ["staticlib", "cdylib"]

# [package.metadata.android]
# package = "github.rainful_diffolor"
# strip = "strip"
# apk_name = "rainful_diffolor"
# build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

# [package.metadata.android.sdk]
# target_sdk_version = 31

# [package.metadata.android.application]
# # icon = ""
# label = "Rainful Diffolor"

[build-dependencies]
embed-resource = "1"

[dependencies.bevy]
version = "0.14"
default-features = false
features = [
    "bevy_ui",
    "bevy_color",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_winit",
    # "default_font",
    "multi_threaded",
    "bevy_scene",
    # "dynamic_linking",

    "x11",

    # "bmp",
    "png",
    # "jpeg",
    # "webp",
    "serialize",
]

[target.'cfg(windows)'.dependencies]
bevy_cosmic_edit = "0.24"

[dependencies]
# UI
sickle_ui = "0.4"

# Control
leafwing-input-manager = { version = "0.15", default-features = false, features = [
    "asset",
    "keyboard",
    "mouse",
    "timing",
] }

# Network
public-ip = "0.2"
local-ip-address = "0.6"
lightyear = { version = "0.17.1", features = ["big_messages", "lz4"] }

# SVG
svg = "0.18"
bevy_prototype_lyon = "0.12"
lyon_algorithms = { version = "1", features = ["serialization"] }
lyon_tessellation = { version = "1", features = ["serialization"] }
lyon_path = { version = "1", features = ["serialization"] }
bevy_vector_shapes = "0.8"
zeno = "0.3"
raqote = "0.8"
# svgtypes = "0.15"
# resvg = "0.44"
# usvg = "0.44"
# tiny-skia = "0.11"

# Image
image = "0.25"
imageproc = { version = "0.25", default-features = false, features = ["rayon"] }
vleue_kinetoscope = "0.2"

# Support
bevy_mod_picking = { version = "0.20", default-features = false, features = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug"
] }
bevy_embedded_assets = "0.11"
i-cant-believe-its-not-bsn = "0.1"
moonshine-save = "0.3"

# Relation
aery = "0.7"

# Others
# noise = "0.9"
strum = { version = "0.26", features = ["derive"] }
arboard = "3.4"
lz4_flex = "0.11"
tokio = { version = "1.36", features = ["net", "io-util"] }
async-compat = "0.2"
winit = "0.30"
rand = "0.8"
serde = "1.0"
ron = "0.8"
dirs = "5.0"
tempfile = "3.13"
# log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

# [patch.crates-io]
# # For webp support - https://github.com/image-rs/image/pull/2228
# image = { git = "https://github.com/image-rs/image" }
# # For webp support - https://github.com/image-rs/image-webp/pull/76
# image-webp = { git = "https://github.com/image-rs/image-webp" }
